--- a/wtw-server/package.json
+++ b/wtw-server/package.json
@@ -7,6 +7,7 @@
 		"sqlite3": "2.2.x",
 		"xmlhttprequest": "1.6.x",
 		"async": "0.2.x",
-		"express": "3.0.x"
+		"express": "3.0.x",
+		"sql": "0.35.*"
 	}
 }
